button fixes on mobile

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -16,7 +16,7 @@
   }
 
   @media only screen and (max-width: 600px) {
-    padding: 2px 5px;
+    padding: 2px 8px;
     font-size: 10px;
   }
 
